--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -217,13 +217,15 @@ section .section-header h2 {
 
 
 
-/* مشغل الحلقات */
 .player-wrapper {
+  position: relative;
   width: 100%;
-  aspect-ratio: 16 / 9;
+  padding-top: 56.25%; /* 16:9 */
 }
 
 .player-wrapper iframe {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   border: 0;
